--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     <header>
         <div class="monogram">S & L</div>
         <h1>The Menu</h1>
-        <div class="date">March 11, 2026</div>
+        <div class="date">11<sup>th</sup> March 2026</div>
     </header>
 
     <section id="starters" class="menu-section">
